--- a/main.html
+++ b/main.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <title>My Art GAMIFIED</title>
-  <script src="script1.js" defer></script>
-  <link rel="stylesheet" href="mystyle.css">
+  <script src="scripts/script1.js" defer></script>
+  <link rel="stylesheet" href="assets/styles/mystyle.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
   </div>
   <!-- Hamster and progress -->
   <div class="item2">
-	  <img src="chubby_cheeked_hamster.jpg" alt="Picture of a hamster in front of red background." width=100% id="hamsterPic">
+	  <img src="assets/img/chubby_cheeked_hamster.jpg" alt="Picture of a hamster in front of red background." width=100% id="hamsterPic">
     <p id="lvl"></p>
     <div class="progress-bar">
       <div id="progress" class="progress"></div>
@@ -24,7 +24,7 @@
     <br>
     <br>
     <div>
-      <img src="treasure_chest.png" alt="Treasure chest." width=70% id="treasureChest" class="center">
+      <img src="assets/img/treasure_chest.png" alt="Treasure chest." width=70% id="treasureChest" class="center">
       <p id="rewardAt">Next reward in: XP</p>
     </div>
   </div>
